--- a/Python_version/Example.ipynb
+++ b/Python_version/Example.ipynb
@@ -325,7 +325,7 @@
     "from data_generator import gendata_linear_cox\n",
     "from data_generator import search_c_cox\n",
     "from cph import cph\n",
-    "Theta = np.array([-1,1],dtype='float32') # beta=-1, intercept=0.5, gamma=1.5\n",
+    "Theta = np.array([-1,1],dtype='float32'),
     "U_max = 3\n",
     "pr = 0.5\n",
     "c = search_c_cox(pr, Theta, U_max, stepsize=0.01,B=1000,corr=0.5,seed=44,graph=False)['c']\n",
